<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.developer.zyumbik.goclayout.MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view1"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_offset"
            android:paddingRight="@dimen/text_offset"
            android:paddingTop="@dimen/text_offset"
            android:paddingBottom="@dimen/text_offset" >

            <TextView
                android:id="@+id/title1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_title"
                android:textColor="@color/text_regular"
                android:text="@string/title1"/>

            <ImageButton
                android:id="@+id/arrow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title1"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ic_keyboard_arrow_up_24dp"/>

            <TextView
                android:id="@+id/brief_description1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_body"
                android:textColor="@color/text_secondary"
                android:layout_toStartOf="@id/arrow1"
                android:layout_toLeftOf="@id/arrow1"
                android:layout_below="@id/title1"
                android:text="@string/brief1"/>

            <TextView
                android:id="@+id/full_description1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_body"
                android:layout_below="@id/arrow1"
                android:text="@string/full1"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view2"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_offset"
            android:paddingRight="@dimen/text_offset"
            android:paddingTop="@dimen/text_offset"
            android:paddingBottom="@dimen/text_offset" >

            <TextView
                android:id="@+id/title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_title"
                android:textColor="@color/text_regular"
                android:text="@string/title2"/>

            <ImageButton
                android:id="@+id/arrow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title2"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ic_keyboard_arrow_down_24dp"/>

            <TextView
                android:id="@+id/brief_description2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_body"
                android:textColor="@color/text_secondary"
                android:layout_toStartOf="@id/arrow2"
                android:layout_toLeftOf="@id/arrow2"
                android:layout_below="@id/title2"
                android:text="@string/brief2"/>

            <TextView
                android:id="@+id/full_description2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_body"
                android:layout_below="@id/arrow2"
                android:text="@string/full2"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view3"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_offset"
            android:paddingRight="@dimen/text_offset"
            android:paddingTop="@dimen/text_offset"
            android:paddingBottom="@dimen/text_offset" >

            <TextView
                android:id="@+id/title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_title"
                android:textColor="@color/text_regular"
                android:text="@string/title3"/>

            <ImageButton
                android:id="@+id/arrow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title3"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ic_keyboard_arrow_down_24dp"/>

            <TextView
                android:id="@+id/brief_description3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_body"
                android:textColor="@color/text_secondary"
                android:layout_toStartOf="@id/arrow3"
                android:layout_toLeftOf="@id/arrow3"
                android:layout_below="@id/title3"
                android:text="@string/brief3"/>

            <TextView
                android:id="@+id/full_description3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_body"
                android:layout_below="@id/arrow3"
                android:text="@string/full3"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
