<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.developer.zyumbik.goclayout.Calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbarABLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">

        <android.support.v7.widget.Toolbar
            android:id="@+id/calculator_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

        <android.support.v7.widget.Toolbar
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout_input_calculator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding_start_toolbar_layout"
                android:paddingStart="@dimen/padding_start_toolbar_layout"
                android:paddingBottom="@dimen/padding_bottom_toolbar_layout"
                android:paddingRight="@dimen/activity_content_area_margin"
                android:paddingEnd="@dimen/activity_content_area_margin">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_label_height"
                    android:theme="@style/AppBarTextLabel">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/inputOutcomes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/calculator_menu_outcomes"
                        android:maxLength="10"
                        android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_label_height"
                    android:theme="@style/AppBarTextLabel">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/inputEvents"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/calculator_menu_events"
                        android:maxLength="10"
                        android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:id="@+id/checkbox_calculator_independent"
                    android:text="@string/calculator_menu_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"/>

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/calcScrollView"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/calculator_list_header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_subtitle_height"
                android:paddingLeft="@dimen/activity_content_area_margin"
                android:paddingStart="@dimen/activity_content_area_margin"
                android:paddingEnd="@dimen/activity_content_area_margin"
                android:paddingRight="@dimen/activity_content_area_margin"
                android:layout_marginTop="@dimen/activity_content_area_margin"
                android:gravity="center_vertical"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/list_subtitle_font_size"
                android:text="@string/calc_list_probabilities_header"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/calcRecyclerProbabilities"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/separator_height"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="@dimen/space_between_content_areas"
                android:layout_marginBottom="@dimen/space_between_content_areas"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/calcRecyclerCombinations"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAddProbability"
        app:fabSize="normal"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:src="@drawable/ic_add_24dp"
        android:clickable="true"
        android:layout_margin="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/layout_input_calculator"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>